--- a/2013/scss/application.scss
+++ b/2013/scss/application.scss
@@ -2,6 +2,8 @@ $black: #000;
 $gray-dark: #333;
 $gray: #666;
 $gray-light: #999;
+$gray-xlight: #ccc;
+$gray-xxlight: #eee;
 $white: #fff;
 $red: #a00;
 $cream: #F2ECCE;
