--- a/2013/scss/header.scss
+++ b/2013/scss/header.scss
@@ -7,7 +7,7 @@
   .container{width: 1000px;}
 
   h1{
-    a{color: $red; text-decoration: none;}
+    a{color: $red; text-decoration: none; border: none;}
     a span{color: $gray-dark;}
   }
 
