--- a/2013/scss/normalize.scss
+++ b/2013/scss/normalize.scss
@@ -251,7 +251,7 @@ figure {
  */
 
 fieldset {
-    border: 1px solid silver;
+    border: 1px solid #c0c0c0;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em;
 }
