--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -1,4 +1,6 @@
 #home{
+  .info{margin-top: 40px; margin-bottom: 40px;}
+
   .container{
     h2{
       margin: 0;
@@ -55,20 +57,24 @@
       }
     }
 
-    div.article{
+    .article{
       @include border-box;
       width: 100%;
       padding: 2px;
       margin: 0.5%;
       float: right;
       text-align: left;
-      border-top: solid 2px $primary-color;
 
       @media screen and (min-width: 600px){ width: 19%;}
 
       &.sponsorship, &.contact{
         float: left;
         @media screen and (min-width: 600px){ width: 39%;}
+      }
+
+      &.sponsor{
+         float: left;
+         @media screen and (min-width: 600px){ width: 32.3%;} 
       }
 
       h3{
@@ -85,40 +91,25 @@
           display: table; font-weight: normal; margin: 0 0 0 20px;
         }
       } 
+    }
+  }
 
-      &.sponsor {
-        width: 100%;
-        h3 {
-          color: $secondary-color;
-          border-top: solid 2px $secondary-color;
-        }
-        ul {
-          padding-left: 0;
-          li {
-            display: block;
-            a {
-              border-bottom: none;
-              img {
-                margin: 30px 0 10px 0;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                max-width: 280px; 
-                max-height: 100px; 
-              }
-            }
-          }
-        }
+  .sponsors{
+    background: $primary-color;
 
-        @media screen and (min-width: 600px){ width: 32%;}
-        &.platinum, &.gold, &.associate, &.dinner {
-          float: left;
-        }
+    .article {
+      &:nth-child(3n+1){clear: both;}
+
+      h3 {color: $secondary-color; border-top: solid 2px $secondary-color;}
+
+      ul{
+        padding: 0; margin: 0;
+        li{ list-style-type: none; margin: 20px 0 0 0; padding: 0; text-align: center;}
+        img{ max-height: 100px; max-width: 100%; }
       }
+
+      &.platinum, &.gold, &.associate, &.dinner { float: left; }
     }
 
-    &.sponsor-block {
-      background: $primary-color;
-    }
   }
 }
