--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -72,11 +72,6 @@
         @media screen and (min-width: 600px){ width: 39%;}
       }
 
-      &.sponsor{
-         float: left;
-         @media screen and (min-width: 600px){ width: 32.3%;} 
-      }
-
       h3{
         color: $primary-color;
         margin: 0;
@@ -95,21 +90,39 @@
   }
 
   .sponsors{
-    background: $primary-color;
+    background: $secondary-color;
 
-    .article {
-      &:nth-child(3n+1){clear: both;}
+    .article{
+      margin: 3% 0.5%;
+      float: left;
+      text-align: center;
+      &:nth-child(4){clear: both;}
 
-      h3 {color: $secondary-color; border-top: solid 2px $secondary-color;}
-
-      ul{
-        padding: 0; margin: 0;
-        li{ list-style-type: none; margin: 20px 0 0 0; padding: 0; text-align: center;}
-        img{ max-height: 100px; max-width: 100%; }
+      &.sponsor{ float: left;
+        @media screen and (min-width: 600px){ width: 32.3%;}
       }
 
-      &.platinum, &.gold, &.associate, &.dinner { float: left; }
+      ul{padding-left: 0;}
     }
 
+    h3, li, a{text-align: center;}
+
+    a{
+      border: none;
+      display: inline-block;
+      margin: 10px 0;
+      background: $white;
+      max-height: 60px;
+      padding: 10px 20px;
+      border-radius: 40px;
+
+      &.light{background: $gray-dark;}
+      &.medium{background: $gray;}
+    }
+
+    ul{padding: 0; margin: 0;
+      li{list-style-type: none; margin: 0; padding: 0; text-align: center;}
+      img{ max-height: 60px; max-width: 100%;}
+    }
   }
 }
