--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -65,12 +65,17 @@
       float: right;
       text-align: left;
 
-      @media screen and (min-width: 600px){ width: 19%;}
+      @media screen and (min-width: 600px){ 
+        width: 19%;
 
-      &.sponsorship, &.contact{
-        float: left;
-        @media screen and (min-width: 600px){ width: 39%;}
+        &.news{width: 59%;}
+        &.contact{width: 39%;}
+        &.twitter{width: 39%;}
       }
+
+      &.contact{float: left;}
+      &.news{float: left;}
+      &.twitter{ float: right;}
 
       h3{
         color: $primary-color;
@@ -125,4 +130,9 @@
       img{ max-height: 60px; max-width: 100%;}
     }
   }
+}
+
+.twitter-timeline, #twitter-widget-0{
+  display: block;
+  width: 100%;
 }
