--- a/2013/assets/application.css
+++ b/2013/assets/application.css
@@ -622,9 +622,14 @@ ul.actions {
     display: inline-block;
     margin: 10px 0;
     background: white;
-    max-height: 60px;
+    height: 80px;
     padding: 10px 20px;
-    border-radius: 40px; }
+    border-radius: 40px;
+    width: 100%;
+    text-align: center;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; }
     #home .sponsors a.light {
       background: #333333; }
     #home .sponsors a.medium {
