--- a/2013/scss/home.scss
+++ b/2013/scss/home.scss
@@ -117,9 +117,12 @@
       display: inline-block;
       margin: 10px 0;
       background: $white;
-      max-height: 60px;
+      height: 80px;
       padding: 10px 20px;
       border-radius: 40px;
+      width: 100%;
+      text-align: center;
+      @include border-box;
 
       &.light{background: $gray-dark;}
       &.medium{background: $gray;}
